Fixed WAVE contrast error with green background

--- a/css/style.css
+++ b/css/style.css
@@ -135,7 +135,7 @@ A  border of 5px on the right and 2px on the top;
 */
 
 .green {
-    background-color: #00EB00;
+    background-color: #008500;
     text-align: left;
     margin-right: 50px;
     border-width: 2px 5px 0px 0px;
